odin-recipes: added all contents to the recipe pages and index pages. no bug found. final commit

--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -7,6 +7,13 @@
 
       <body>
             <h1>Bangla Food Recipes</h1>
+            <img src="image/indubala.jpg" alt="cover image">
+
+            <ul>
+                  <li><a href="recipes/aluvorta.html">Alu Vorta - আলু ভর্তা</a></li>
+                  <li><a href="recipes/fuchka.html">Fuchka - ফুচকা</a></li>
+                  <li><a href="recipes/singara.html">Singara - সিঙ্গাড়া</a></li>
+            </ul>
       </body>
 
 </html>
