--- a/odin-recipes/recipes/aluvorta.html
+++ b/odin-recipes/recipes/aluvorta.html
@@ -7,5 +7,23 @@
 
       <body>
             <h1> Alu Vorta - আলু ভর্তা </h1>
+            <img src="../image/aluvorta.png" alt="aluvorta img">
+            <p>Alu vorta, is a dish made by mashing boiled soft potatoes and mixing chopped chilies, onion, salt and mustard oil. It is usually eaten as a side dish in West Bengal and Bangladesh</p>
+            <h3>Ingredients</h3>
+                  <ul>
+                        <li>Potatos</li>
+                        <li>Onion</li>
+                        <li>Pepper</li>
+                        <li>Salt</li>
+                        <li>Mustard Oil</li>
+                  </ul>
+            <h3>Steps</h3>
+                  <ol>
+                      <li>First you have to boil the potatoes in a separate pot</li>
+                      <li>Boiled potatoes should be crushed with the help of hands</li> 
+                      <li>Mix well with fried onion, pepper and mustard oil. Proper amount of salt should be given</li> 
+                  </ol>
+
+                  <a href="../index.html">Back to Index</a>
       </body>
 </html>
