--- a/odin-recipes/recipes/fuchka.html
+++ b/odin-recipes/recipes/fuchka.html
@@ -7,5 +7,20 @@
 
       <body>
             <h1> Fuchka - ফুচকা </h1>
+            <img src="../image/fuchka.png" alt="fuchka">
+            <p>Fuchka consists of a round hollow puri (a deep-fried crisp flatbread), filled with a mixture of flavored water</p>
+            <h3>Ingredients</h3>
+                  <ul>
+                        <li>Fuchka</li>
+                        <li>Chatni</li>
+                        <li>Daal</li>
+                  </ul>
+            <h3>Steps</h3>
+                  <ol>
+                      <li>Prepare the chatni</li>
+                      <li>Ready Daal</li> 
+                      <li>Mix with fuchka</li> 
+                  </ol>
+                  <a href="../index.html">Back to Index</a>
       </body>
 </html>
