--- a/odin-recipes/recipes/singara.html
+++ b/odin-recipes/recipes/singara.html
@@ -7,5 +7,20 @@
 
       <body>
             <h1> Singara - সিংগাড়া </h1>
+            <img src="../image/singara.png" alt="singara">
+            <p>A Singara is a fried South Asian pastry with a savoury filling, including ingredients such as spiced potatoes, onions, peas.</p>
+            <h3>Ingredients</h3>
+                  <ul>
+                        <li>Potatos</li>
+                        <li>Vegetables</li>
+                        <li>Nuts</li>
+                  </ul>
+            <h3>Steps</h3>
+                  <ol>
+                      <li> To make the dough, mix salt and water together and dissolve the salt. Then mix flour, oil and the salty water together and make smooth but a little bit hard dough.</li>
+                      <li>Heat the frying pan and pour the oil in the pan. Add the cumin seeds and when it crackles, add onion. </li> 
+                      <li>Heat the frying pan with the oil for deep fry. When oil is ready, place the singaras in the pan few at a time. Don’t make the pan crowded. Keep space in the pan for the singaras to float around.</li> 
+                  </ol>
+                  <a href="../index.html">Back to Index</a>
       </body>
 </html>
