Dom Calculator: calculator.js added + some changes on index.html

--- a/DOM/calculator/index.html
+++ b/DOM/calculator/index.html
@@ -14,7 +14,7 @@
       <div class="center-container">
       <div class="container">
             <div class="input-field">
-                  <input type="text">
+                  <input type="text" id="screen">
             </div>
             <div class="row-one">
                   <button>0</button>
@@ -51,5 +51,6 @@
       <div class="footer">
             Copyright © Novojit Das
       </div>
+      <script src="calculator.js"></script>
 </body>
 </html>
